--- a/demo/html/bauen/multipage-dark/not-found-404.html
+++ b/demo/html/bauen/multipage-dark/not-found-404.html
@@ -58,7 +58,7 @@
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Liên hệ</a></li>
             </ul>
         </div>
     </nav>
