--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div class="text-right item bg-img" data-overlay-dark="4" data-background="img/slider/2.jpg">
+            <div class="text-right item bg-img" data-overlay-dark="4" data-background="/img/history.jpg">
                 <div class="v-middle caption mt-30">
                     <div class="container">
                         <div class="row">
