--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -77,7 +77,7 @@
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                         <br>Lorem Ipsum is simply typesetting industry.
                                     </p>
-                                    <div class="butn-light mt-30 mb-30"><a href="#0"><span>Discover</span></a></div>
+                                    <div class="butn-light mt-30 mb-30"><a href="#0"><span>Xem thêm</span></a></div>
                                 </div>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                         <br>Lorem Ipsum is simply typesetting industry.
                                     </p>
-                                    <div class="butn-light mt-30 mb-30"><a href="#0"><span>Discover</span></a></div>
+                                    <div class="butn-light mt-30 mb-30"><a href="#0"><span>Xem thêm</span></a></div>
                                 </div>
                             </div>
                         </div>
