--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -128,15 +128,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <h2 class="section-title">Về Rula <span>RULA</span></h2>
-                        <p>Architecture viverra tristique justo duis vitae diam neque nivamus aestan ateuene artines aringianu atelit finibus viverra nec lacus. Nedana theme erodino setlie suscipe no curabit tristique.</p>
-                        <p>Design inilla duiman at elit finibus viverra nec a lacus themo the drudea seneoice misuscipit non sagie the fermen.</p>
-                        <p>Planner inilla duiman at elit finibus viverra nec a lacus themo the drudea seneoice misuscipit non sagie the fermen. Viverra tristique jusio the ivite dianne onen nivami acsestion augue artine.</p>
+                        <h2 class="section-title">Về<span>RULA</span></h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                        <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                     </div>
                     <div class="col-md-6 animate-box" data-animate-effect="fadeInUp">
                         <div class="about-img">
-                            <div class="img"> <img src="img/about.jpg" class="img-fluid" alt=""> </div>
-                            <div class="about-img-2 about-buro">Canada Office</div>
+                            <div class="img"> <img src="/our team .jpg" class="img-fluid" alt=""> </div>
+                            <div class="about-img-2 about-buro">Rula Team</div>
                         </div>
                     </div>
                 </div>
