--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -154,34 +154,34 @@
                     <div class="col-md-12">
                         <div class="owl-carousel owl-theme">
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/projects/1.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img src="/img/project1.jpg" alt=""> </div>
                                 <div class="con">
-                                    <h6><a href="cotton-house.html">Interior</a></h6>
-                                    <h5><a href="cotton-house.html">Cotton House</a></h5>
+                                    <h6><a href="cotton-house.html">Lorem Ipsum</a></h6>
+                                    <h5><a href="cotton-house.html">Dự án 1</a></h5>
                                     <div class="line"></div> <a href="cotton-house.html"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/projects/2.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img src="/img/project2.jpg" alt=""> </div>
                                 <div class="con">
-                                    <h6><a href="armada-center.html">Exterior</a></h6>
-                                    <h5><a href="armada-center.html">Armada Center</a></h5>
+                                    <h6><a href="armada-center.html">Lorem Ipsum</a></h6>
+                                    <h5><a href="armada-center.html">Dự án 2</a></h5>
                                     <div class="line"></div> <a href="armada-center.html"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/projects/3.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img src="/img/project3.jpg" alt=""> </div>
                                 <div class="con">
-                                    <h6><a href="stonya-villa.html">Urban</a></h6>
-                                    <h5><a href="stonya-villa.html">Stonya Villa</a></h5>
+                                    <h6><a href="stonya-villa.html">Lorem Ipsum</a></h6>
+                                    <h5><a href="stonya-villa.html">Dự án 3</a></h5>
                                     <div class="line"></div> <a href="stonya-villa.html"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/projects/4.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img src="/img/project4.jpg" alt=""> </div>
                                 <div class="con">
-                                    <h6><a href="prime-hotel.html">Interior</a></h6>
-                                    <h5><a href="prime-hotel.html">Prime Hotel</a></h5>
+                                    <h6><a href="prime-hotel.html">Lorem Ipsum</a></h6>
+                                    <h5><a href="prime-hotel.html">Dự án 4</a></h5>
                                     <div class="line"></div> <a href="prime-hotel.html"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
