--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -195,16 +195,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="section-title">Our <span>Services</span></h2>
+                        <h2 class="section-title">Dịch vụ <span>của chúng tôi</span></h2>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="item">
                             <a href="architecture.html"> <img src="img/icons/icon-1.png" alt="">
-                                <h5>Architecture</h5>
+                                <h5>Dịch vụ 1</h5>
                                 <div class="line"></div>
-                                <p>Architecture bibendum eros eget lacus the vulputate sit amet vehicuta nibhen ulicera in the vitae miss.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
@@ -212,9 +212,9 @@
                     <div class="col-md-4">
                         <div class="item">
                             <a href="interior-design.html"> <img src="img/icons/icon-2.png" alt="">
-                                <h5>Interior Design</h5>
+                                <h5>Dịch vụ 2</h5>
                                 <div class="line"></div>
-                                <p>Architecture bibendum eros eget lacus the vulputate sit amet vehicuta nibhen ulicera in the vitae miss.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                 <div class="numb">02</div>
                             </a>
                         </div>
@@ -222,9 +222,9 @@
                     <div class="col-md-4">
                         <div class="item">
                             <a href="urban-design.html"> <img src="img/icons/icon-3.png" alt="">
-                                <h5>Urban Design</h5>
+                                <h5>Dịch vụ 3</h5>
                                 <div class="line"></div>
-                                <p>Architecture bibendum eros eget lacus the vulputate sit amet vehicuta nibhen ulicera in the vitae miss.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                 <div class="numb">03</div>
                             </a>
                         </div>
