--- a/demo/html/bauen/multipage-dark/index.html
+++ b/demo/html/bauen/multipage-dark/index.html
@@ -384,9 +384,9 @@
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Phone</h6>
+                                <h6>Hotline</h6>
                             </div>
-                            <p>+1 203-123-0606</p>
+                            <p>(+84) 974372468</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
@@ -394,15 +394,15 @@
                             <div class="fothead">
                                 <h6>Email</h6>
                             </div>
-                            <p>architecture@RULA.com</p>
+                            <p>info@rula.com.vn</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Our Address</h6>
+                                <h6>Địa chỉ</h6>
                             </div>
-                            <p>24 King St, Charleston, SC 29401 USA</p>
+                            <p>Tầng 4 - số 119 Nguyễn Ngọc Nại - Thanh Xuân Hà Nội - Việt Nam</p>
                         </div>
                     </div>
                 </div>
