--- a/demo/html/bauen/multipage-dark/team.html
+++ b/demo/html/bauen/multipage-dark/team.html
@@ -257,9 +257,9 @@
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Our Address</h6>
+                                <h6>Địa chỉ</h6>
                             </div>
-                            <p>24 King St, Charleston, SC 29401 USA</p>
+                            <p>Tầng 4 - số 119 Nguyễn Ngọc Nại - Thanh Xuân - Hà Nội - Việt Nam</p>
                         </div>
                     </div>
                 </div>
